--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "build": "webpack --mode production",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "husky": {
     "hooks": {
@@ -27,7 +30,7 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.1",
+    "css-loader": "^5.2.4",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.11.0",
@@ -49,10 +52,21 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.5",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.8.0",
+    "jest-css-modules": "^2.0.0",
+    "jest-environment-jsdom-fourteen": "^0.1.0",
+    "jest-prop-type-error": "^1.1.0",
+    "jest-resolve": "^24.8.0",
+    "jest-watch-typeahead": "^0.3.1",
+    "lint-staged": "^11.0.0",
+    "react-test-renderer": "^16.8.6",
     "redux-devtools-extension": "^2.13.8",
     "webpack-dev-server": "^3.3.1"
   }
